--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "njs",
+  "name": "robots",
+  "homepage": "https://zeolenon.github.io/robots",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,12 +14,12 @@
     "tachyons": "^4.11.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
   },
   "eslintConfig": {
     "extends": "react-app"
